test/domains/unsafeAssign/HaltUnownedArray.good
HaltUnownedArray.chpl:13: error: halt reached - Can only initialize elements of arrays declared over the domain being resized
